updates (good commit message, eh? ;)
svn path=/trunk/; revision=4106

--- a/TODO
+++ b/TODO
@@ -1,5 +1,10 @@
 - fix array list
 - remove _birnet_init_messaging
+- adsr: + delay parameter
+  looping flag
+  gate out (phase selectable)
+  time: 2 scales ; seconds milliseconds
+- freq->freq module feature: offer volt/per/octave output  
 NEXT-RELEASE:
 - add "difference" channel to BseSummation (which deprecated BseAdder)
 - add freq->freq detuning/modulation plugin
