--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Nov 27 22:40:46 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tools/bsewavetool.cc: Move highpass handle from gsl to bse
+	namespace.
+
 Sun Nov 26 16:25:50 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tools/bseloopfuncs.[hc]: Moved highpass handle to
