--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Tue Nov 28 21:05:16 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bsedatahandle-fir.cc: Some optimizations, more to come.
+
 Mon Nov 27 22:32:24 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bsedatahandle-fir.cc:
