--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,9 @@
+Tue Nov 28 01:20:57 2006  Tim Janik  <timj@gtk.org>
+
+	* birnetthreadimpl.cc: do not provide chain/unchain functions after 
+	thread system initialization, since calling them at this point is
+	invalid.
+
 Wed Nov 22 19:45:21 2006  Tim Janik  <timj@gtk.org>
 
 	* birnetutils.cc (url_test_show): prefer configurable browser launchers
