--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Mon Dec  4 12:38:13 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tools/bsewavetool.cc: Added lowpass command. Both commands: made
+	order configurable. Print out the frequency where the filter response
+	is close to -48dB. This allows the user to get an idea how wide the
+	transition band is for a given order.
+
 Mon Dec  4 02:45:21 2006  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstmain.c: print out version information for Ogg/Vorbis.
