--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,9 @@
+Sun Dec 10 23:56:56 2006  Tim Janik  <timj@gtk.org>
+
+	* davxtalstrings.c (dav_xtal_strings_class_init):
+	* davsyndrum.c (dav_syn_drum_class_init): added i18n markup and
+	adapted some tooltips.
+
 Sun Dec 10 23:43:42 2006  Tim Janik  <timj@gtk.org>
 
 	* davcanyondelay.c (dav_canyon_delay_class_init): added i18n markup and
